index.css
/* ... */
#timeline > .month-cell {
    min-height: 50px;
}
#timeline > div.timeline-element > span.month, #timeline > div.timeline-element > span.static {
    transform: translate(2ch);
}
#timeline > div.timeline-element > span.static {
    position: relative;
    opacity: 0.7;
    bottom: 1lh;
}
#timeline > div.timeline-element > span.year {
    transform: translateX(9ch);
}
#timeline > div.timeline-element > span.decade {
    transform: translateX(6ch);
}

/*
#timeline > div > .current {
    font-size: 10px;
    color: #ff0000;
}
*/

#project-container {
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-start;
    gap: 20px;
    padding: 20px;
}

.project-timeline {
    height: 100%;
    width: 100%;

    display: grid;
    grid-template-columns: 100%;
}

.project {
    /*background-color: #ffffff;*/
    background-color: var(--project-color);
    background-image: radial-gradient(circle 200px at var(--mouse-x, 50%) var(--mouse-y, 50%), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.1) 80%, rgba(255, 255, 255, 0) 100%);
    border-radius: 8px;
    box-shadow: 0 4px 8px var(--project-shadow-color);
    width: calc(100% - 20px);
    padding: 10px;
    margin-bottom: 10px;

    text-align: center;

    overflow: hidden;

    justify-items: center;
    justify-self: center;

    position: relative;

    opacity: 0;

    transform: translateX(-100px);

    interpolate-size: allow-keywords;
    /* NOTE: when editing also check in .project.in-view.project-focused; these set to center */
    transition: box-shadow 0.3s ease, opacity 0.3s ease, transform 0.3s ease, 
    height 0.3s ease, width 0.3s ease -0.1s, left 0.3s linear -0.3s, 
    background-color 0.3s ease;
}

.project.in-view {
    transform: translateX(0);
    opacity: var(--project-opacity, 1);
    left: 0;
}

.project.in-view:hover {
    cursor: var(--project-cursor, pointer);
    box-shadow: 0 6px 12px var(--project-shadow-color-hover);
    /*
    opacity: 1;
    height: var(--project-max-height, auto);
    */
}
.project.in-view:hover:not(.project-focused) {
    background-color: var(--project-color-hover);
}
.project.in-view:active {
    box-shadow: 0 2px 4px var(--project-shadow-color-active);
}
.project.in-view.project-focused {
    cursor: pointer;
    opacity: 1;
    height: var(--project-max-height, auto);
    width: calc(max(70vw, 600px) - 3em - 20px);
    max-width: calc(100vw - 12em - 20px);
    left: -3em;
    /* NOTE: when editing also check in .project; these set back to normal */
    transition: box-shadow 0.3s ease, opacity 0.3s ease, transform 0.3s ease, 
    height 0.3s ease, width 0.1s ease 0.1s, left 0.2s linear 0.1s,
    background-color 0.3s ease;
}

.project > .project-content {
    /* second argument from .project-focused width */
    width: calc(min(100%, calc(max(70vw, 600px) - 3em - 20px)));
    height: 100%;
    justify-items: center;
    overflow: hidden;

    display: flex;
    flex-direction: column;
    align-items: center;

    gap: 0px;
}

.project .tags {
    padding-bottom: 12px;
}

.project p {
    margin: 10px 20px;
    font-size: 14px;
    color: var(--project-font-color);
}

.project h2 {
    margin: 5px 0px;
    color: var(--project-font-color);
}

/* From here until buffer, fix this spaghetti later */
.project .project-info {
    display: none;
    width: 0;
    height: 0;
    margin-top: 0;

    flex-grow: 1;

    overflow: hidden;

    interpolate-size: allow-keywords;
    transition: display 0.3s ease, width 0.3s ease, margin-top 0.3s ease;
}
.project.project-focused .project-info {
    display: block;
    width: 100%;
    margin-top: 10px;

    border-top: 1px solid var(--project-font-color);
}

.project-info-content {
    display: none;
    width: 100%;
    height: 100%;
}

.project.project-focused .project-info > .project-info-content {
    display: block;

    overflow-y: auto;
    overflow-x: hidden;
}

.project-demo-container {
    position: relative;
    justify-items: center;

    background-color: black;
    border-radius: 5px;

    max-height: 50vh;
}

.project-demo-container > #demo-btn {
    position: absolute;
    top: 5px;
    right: 5px;
    width: calc(5% - 10px);
    aspect-ratio: 1;

    background-color: rgb(255, 255, 255);
    border-radius: 4px;
    color: black;

    cursor: none;
    opacity: 0;
    
    transition: opacity 0.3s ease;

    display: none; /* TODO: WIP */
}
.project.in-view.project-focused .project-demo-container > #demo-btn {
    cursor: pointer;
    opacity: 1;
}
.project-demo-container > #demo-btn > svg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: calc(100% - 4px);
    aspect-ratio: 1;
    transition: width 0.3s ease;
}
.project-demo-container > #demo-btn:hover > svg {
    width: 100%;
}

.project-demo-container > .project-demo {
    width: min(90%, calc(50vh * 16/9)); /* TODO: 50vh arbitrary, fix */
    aspect-ratio: 16/9;

    transition: width 0.3s ease;
}

#buffer {
    position: relative;
    height: 0px;

    animation-duration: 0.3s;
    animation-timing-function: ease;
}
#buffer.buffer-active {
    height: 100vh;
    animation-name: bufferAnimation;
}

@keyframes bufferAnimation {
    0% {
        height: 100vh;
    }
    100% {
        height: 0px;
    }
}

.tags > span.ignore, #key.tags > span.ignore {
    text-decoration: line-through;
    
    /*
    filter: gray;
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    */
    color: white;
    background-color: gray;
    background: gray;
    animation: none;
    opacity: 0.5;
    text-decoration-color: rgba(255, 30, 30, 0.5);
    text-decoration-thickness: 2px;
    font-style: italic;
}

.tags > .exclusive {
    font-weight: 700;
    text-decoration: underline;
    text-decoration-thickness: 4px;
}

.tags {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    column-gap: 6px;
    row-gap: 4px;
    margin-top: 10px;

    width: 100%;
}
/* ... */

